// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard: reducer BLOCK_DIFFICULTY: store 1`] = `
Object {
  "blockDifficulty": Array [
    Object {
      "x": 0,
      "y": 8192,
    },
    Object {
      "x": 1,
      "y": 131072,
    },
    Object {
      "x": 2,
      "y": 131072,
    },
    Object {
      "x": 3,
      "y": 131072,
    },
    Object {
      "x": 4,
      "y": 131072,
    },
    Object {
      "x": 5,
      "y": 131072,
    },
    Object {
      "x": 6,
      "y": 131072,
    },
    Object {
      "x": 7,
      "y": 131072,
    },
    Object {
      "x": 8,
      "y": 131072,
    },
    Object {
      "x": 9,
      "y": 131072,
    },
  ],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer BLOCK_DIFFICULTY: update 1`] = `
Object {
  "blockDifficulty": Array [
    Object {
      "x": 0,
      "y": 8,
    },
  ],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer BLOCK_NUMBER: store 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 9,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer BLOCK_NUMBER: update 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 2,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer BLOCK_PROPAGATION: store 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [
    Object {
      "x": 0,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 1512994588,
    },
    Object {
      "x": 2,
      "y": 3358,
    },
    Object {
      "x": 3,
      "y": 19,
    },
    Object {
      "x": 4,
      "y": 1846,
    },
    Object {
      "x": 5,
      "y": 301,
    },
    Object {
      "x": 6,
      "y": 48,
    },
    Object {
      "x": 7,
      "y": 55429,
    },
    Object {
      "x": 8,
      "y": 106195,
    },
    Object {
      "x": 9,
      "y": 58,
    },
  ],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer BLOCK_PROPAGATION: update 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [
    Object {
      "x": 0,
      "y": 3358,
    },
  ],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer CONTRACT_COUNT: store 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 2,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer CONTRACT_COUNT: update 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 4,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer TRANSACTION_COUNT: store 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [
    Object {
      "x": 0,
      "y": 0,
    },
    Object {
      "x": 1,
      "y": 1,
    },
    Object {
      "x": 2,
      "y": 1,
    },
    Object {
      "x": 3,
      "y": 1,
    },
    Object {
      "x": 4,
      "y": 1,
    },
    Object {
      "x": 5,
      "y": 1,
    },
    Object {
      "x": 6,
      "y": 1,
    },
    Object {
      "x": 7,
      "y": 1,
    },
    Object {
      "x": 8,
      "y": 1,
    },
    Object {
      "x": 9,
      "y": 1,
    },
  ],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer TRANSACTION_COUNT: update 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [
    Object {
      "x": 0,
      "y": 0,
    },
  ],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer TRANSACTION_TYPES: store 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [
    Object {
      "type": "FunctionCall",
      "val": 6,
    },
    Object {
      "type": "Transfer",
      "val": 1,
    },
    Object {
      "type": "Contract",
      "val": 2,
    },
  ],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer TRANSACTION_TYPES: update 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [
    Object {
      "type": "Transfer",
      "val": 1,
    },
    Object {
      "type": "Contract",
      "val": 2,
    },
  ],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;

exports[`Dashboard: reducer USERS_COUNT: store 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 1,
}
`;

exports[`Dashboard: reducer USERS_COUNT: update 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "lastBlockNumber": 0,
  "shardCount": 0,
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 2,
}
`;

exports[`Dashboard: reducer set initial state 1`] = `
Object {
  "blockDifficulty": Array [],
  "blockPropagation": Array [],
  "contractsCount": 0,
  "healthStatus": false,
  "ifHovering": false,
  "lastBlockNumber": 0,
  "networkStatus": false,
  "shardCount": 0,
  "systemStatus": false,
  "systemWarnings": "",
  "transactionTypes": Array [],
  "transactionsCount": Array [],
  "uptime": 0,
  "usersCount": 0,
}
`;
